Localization efforts for the US factions

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -16,7 +16,7 @@ TEX_infantry_tanks:0 "Infantry Tanks"
 TEX_infantry_tanks_desc:0 ""
 TEX_cruisers_tanks:0 "Cruisers Tanks"
 TEX_cruisers_tanks_desc:0 ""
-TEX_superior_fire_power:0 "Ramey's combined arms plan"
+TEX_superior_fire_power:0 "Collins's combined arms plan"
 TEX_superior_fire_power_desc:0 ""
 TEX_praise_the_lord:0 "Praise the Lord"
 TEX_praise_the_lord_desc:0 ""
