--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -40,7 +40,7 @@ NEE_motorized_infantry_desc:0 "As part of the Chipman's combined arms strategy w
 NEE_curiser_tanks:0 "Cruiser Tanks"
 NEE_curiser_tanks_desc:0 "As part of the Combined Arms strategy, we should focus on researching and producing Cruiser Tanks. Tanks that will strike fast and hard, and be the tip of the spear that shall be followed up by our infantry who come in right after them."
 NEE_new_officers:0 "New Officers"
-NEE_new_officers_desc:0 ""
+NEE_new_officers_desc:0 "With the National Guard of New England's modernization nearly done. We should bring in the new officers from West Point into the Army. This will help provide a new generation of officers to help finish our modernizations of the Army."
 
 ### Foci - Naval ###
 NEE_coast_guard:0 "New England Coast Guard"
@@ -62,15 +62,15 @@ NEE_yankee_marines_desc:0 "We should create our own version of the Marine Corps 
 NEE_aviation:0 "New England Air Force"
 NEE_aviation_desc:0 "We should create the New England Air Force to defend the skies of New England. The question is should we favour bombers or fighters?"
 NEE_fighters:0 "Air support"
-NEE_fighters_desc:0 ""
+NEE_fighters_desc:0 "To protect New England Skies we should embrace the doctrine of Air support. By working with our ground forces and using our air force to destroy the enemy will keep New England safe. "
 NEE_cas_effort:0 "Close Air Support"
-NEE_cas_effort_desc:0 ""
+NEE_cas_effort_desc:0 "As we work with our Air force and our doctrine of Air Support, we should focus on Close Air Support aircraft. "
 NEE_bombers:0 "Air Supremacy"
-NEE_bombers_desc:0 ""
+NEE_bombers_desc:0 "To protect New England Skies we should embrace the doctrine of Air Supremacy. By ruling the skies we will keep New England Safe from any danger. "
 NEE_expand_air_ports:0 "New Aviators"
-NEE_expand_air_ports_desc:0 ""
+NEE_expand_air_ports_desc:0 "As we work on building up the Air Force of New England we should bring in our new generation of Aviators into the air force to work on modernizing and our air doctrines. "
 NEE_naval_bombs:0 "Fighter Supporter"
-NEE_naval_bombs_desc:0 ""
+NEE_naval_bombs_desc:0 "In order to rule the skies we should work to make sure that we have the best fighters in America. With the best fighters in New England's Arsenal then our freedom is ensured. "
 NEE_found_wasp:0 "Found the WASPs"
 NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots commonly called the WASP. This will help provide our female aviators who wish to help defend New England an organization to do just that."
 NEE_boston_rockets:0 "Boston Rockets"
