--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -8,9 +8,9 @@ CAL_civil_war_desc:0 "Chaos rages in the eastern part of the United States as th
 CAL_beacon_of_democracy:0 "Beacon of Democracy"
 CAL_beacon_of_democracy_desc:0 "With Syndicalists in the Midwest and American First members in the South and everything in between in the rest of the country, the east is losing the democracy of America. We on the Pacific coast remain the last beacon of democracy. We shall remain a bright light in a dark time. "
 CAL_encourge_free_thought:0 "Encourge Free Thought"
-CAL_encourge_free_thought_desc:0 ""
+CAL_encourge_free_thought_desc:0 "The west thrives on innovation and entrepreneurs. This can only be possible through free thought. We should not silence those that might oppose us. Instead we should welcome it and encourage it. The scientists that come to the Pacific States from the Civil War in the East will be happy to find safe refugee in our country. "
 CAL_defend_democarcy:0 "Defend Democracy"
-CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left in the world. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
+CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left on the contient. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
 CAL_progressive_capitalism:0 "Progressive Capitalism"
 CAL_progressive_capitalism_desc:0 "We are prosperous while the east has fallen into depression and chaos. Part of that is due to how progressive and capitalist we are here in the East. Those two go hand in hand to create a prosperous country."
 CAL_initiative_referendum:0 "Initiatives and Referendums"
@@ -20,7 +20,7 @@ CAL_immigrant_land_desc:0 "The Pacific coast has been a land of immigrants from 
 CAL_defend_democarcy:0 "Defend Democracy"
 CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left in the world. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
 CAL_new_nationalism:0 "New Nationalism"
-CAL_new_nationalism_desc:0 ""
+CAL_new_nationalism_desc:0 "We have formed a new identity, Pacifican, and more and more are finding themselves loyal to the Pacific States of America over loyalty to the USA. We should encourage this new nationalism and work on making people loyal to our new country over the USA."
 
 ### Foci - Military - Army ###
 CAL_military:0 "Building a military"
@@ -90,75 +90,73 @@ CAL_women_aviators_desc:0 "We have many female aviators out here in the west coa
 CAL_cas:0 "Close Air Support"
 CAL_cas_desc:0 "The centre of the policy of Air Support will be Close Air Support planes. Thus in order to put this plan into proper implementation we must make sure that our Close Air Support Planes are the best and most modernised to defend our prosperity on the Pacific Coast."
 CAL_expand_air_ports:0 "Expand Air Ports"
-CAL_expand_air_ports_desc:0 ""
+CAL_expand_air_ports_desc:0 "To support the new Pacific Air Force, we should work on expanding our airports so that throughout the Pacific States we can have airports for the Air Force. "
 CAL_rocketry:0 "Pacific Rocketry"
-CAL_rocketry_desc:0 ""
+CAL_rocketry_desc:0 "As we advance our air force our scientists are encouraging us to look into rocketry. We should support our inventors by offering research grants for those that will look into rocketry and jet technology for us. "
 
 ### Foci - Economic ###
 CAL_economic_policy:0 "Enhancing Our Prosperity"
-CAL_economic_policy_desc:0 ""
+CAL_economic_policy_desc:0 "Of all the regions of the United States, the Pacific States remained the wealthiest. While we were hit by the Great Depression as well, we were able to soften its blow here in the West by rebounding quicker then in the East. With the Civil War engulfing the country we should do what we can to safeguard our prosperity. "
 CAL_free_trade:0 "Free Trade"
-CAL_free_trade_desc:0 ""
+CAL_free_trade_desc:0 "Capitalism is the basis of our Trade, while many in the east are hostile to capitalism and free trade we are not. We should encourage more free trade as it was the basis of our prosperity. This will help make sure that our economy remains strong. "
 CAL_pacific_gateway:0 "Gateway to the Pacific"
-CAL_pacific_gateway_desc:0 ""
+CAL_pacific_gateway_desc:0 "We are the gateway to the Pacific on the Americas. Our primary source of trade are the Asian countries and the Asian colonies. As we work on our trade, we should make sure to protect and expand our maritime trade. This way the lifeblood of the Pacific remains strong. "
 CAL_bussiness_start_ups:0 "Entrepreneurial Spirit"
-CAL_bussiness_start_ups_desc:0 ""
+CAL_bussiness_start_ups_desc:0 "We are a land of Entrepreneurs and that Entrepreneurial spirit remains strong in our new country. We have always encouraged business to grow in the west coast even when we were part of America. Now that we are independent we should make sure that this spirit is never lost. "
 CAL_good_regulations:0 "Progressive regulations"
-CAL_good_regulations_desc:0 ""
+CAL_good_regulations_desc:0 "The progressive movement was strong out here in the west coast. Though it ended with the Great Depression, we should encourage a progressive approach to capitalism to safeguard our trade. Doing so now will prevent both the far left and far right from gaining power and destroying our prosperity."
 CAL_urban_planning:0 "Urban Planning"
-CAL_urban_planning_desc:0 ""
+CAL_urban_planning_desc:0 "The West Coast houses a number of important cities and there are plans by architectures to build new cities throughout the region. By encouraging this movement we can not only build better cities throughout our country but the plan calls for highways throughout the region to link the cities."
 CAL_gospel_of_wealth:0 "Gospel of Wealth"
-CAL_gospel_of_wealth_desc:0 ""
+CAL_gospel_of_wealth_desc:0 "Wealth flourishes on the West Coast however we should encourage a culture of philanthropy among our upper class. The famed billionaire Howard Hughes has made a name for himself through his charities. To reach his level of success other millionaires and billionaires should follow suite. This will help our new country grow with their good will."
 CAL_expand_universities:0 "Expand Universities"
-CAL_expand_universities_desc:0 ""
-CAL_celebrty_power:0 "Star Power"
-CAL_celebrty_power_desc:0 ""
-CAL_californian_dream:0 "Californian Dream"
-CAL_californian_dream_desc:0 ""
+CAL_expand_universities_desc:0 "We have a number of universities in our country. We should encourage their growth and publicly support them through various grants from the government. This will help encourage research at our numerous universities."
+CAL_californian_dream:0 "Pacifican Dream"
+CAL_californian_dream_desc:0 "There was the American Dream where someone could come to America and make a living and through hard-work and persistence become rich or at least comfortable.  While in the east that dream seems to have died a bloody death, out here in the west coast it is a live and well. It is however no longer the American Dream but the Pacifican Dream. "
 CAL_big_bussiness:0 "Support Big Business"
-CAL_big_bussiness_desc:0 ""
+CAL_big_bussiness_desc:0 "To help industrialize the country and prepare once the civil war comes east, we should support the numerous big businesses and firms that have a vested interest in those fields. By working closely with them we can help enhance and enrich not just those at the top but the workers of the Pacific too."
 CAL_expand_rail_componies:0 "Expand railroad companies"
-CAL_expand_rail_componies_desc:0 ""
+CAL_expand_rail_componies_desc:0 "There are a number of railroad companies throughout our new country, Southern Pacific, Union Pacific, Western Pacific and more. The civil war is disrupting their trade which will harm our prosperity. To avoid this we should encourage them to build in our new country and relocate here. "
 CAL_expand_mining_companies:0 "Expand mining companies"
-CAL_expand_mining_companies_desc:0 ""
+CAL_expand_mining_companies_desc:0 "There are a number of important mines throughout the Pacific States. We should work with the mining companies to open up new mines. This will help us expand our resources and make sure that our businesses have the resources to keep up production now that we are independent."
 CAL_support_nbc:0 "Support radio companies"
 CAL_support_nbc_desc:0 "We should support our various radio companies from NBC to CBS. By supporting them we can not only keep the people happy but it will also help let us use the radio for military matters should our beloved republic ever be threatened by outside foes."
 CAL_west_coast_bounty:0 "The West Coast's Bounty"
-CAL_west_coast_bounty_desc:0 ""
+CAL_west_coast_bounty_desc:0 "The west coast holds a large bounty of natural resources that lay untapped. Of particular notice are oil fields and rubber. Both of which shall be of particular useful for our industries as we we can now produce and sell them around the world in addition to using it for our own needs. "
 
 ### Foci - Foreign ###
 CAL_foreign_policy:0 "Foreign Policy"
-CAL_foreign_policy_desc:0 ""
+CAL_foreign_policy_desc:0 "It is time to chose allies for the Pacific States. We can not remain isolated if we are to survive as an independent country. Thus we should seek out potential allies and friends for the Pacific States of America. "
 CAL_join_entente:0 "Join the Entente"
-CAL_join_entente_desc:0 ""
+CAL_join_entente_desc:0 "We should join the Entente and align our selves with the British empire. The British Empire remains a bulwark against syndicalism and tyranny around the world. With the british by our side the Pacific States shall remain free and independent. "
 CAL_canadian_freindship:0 "Canadian Friendship"
-CAL_canadian_freindship_desc:0 ""
+CAL_canadian_freindship_desc:0 "To better improve relations with our new allies we should begin a campaign to win them over and ingratiate ourselves with them. This should help show that we are committed to the Entente. "
 CAL_australasia_freindship:0 "Entente Prosperity"
-CAL_australasia_freindship_desc:0 ""
+CAL_australasia_freindship_desc:0 "As we work with our new allies we should work to improve the prosperity of both nations and improve the trade between our countries. This will help ensure that the other nations of the Entente prosper as well ourselves. "
 CAL_join_isac:0 "Join ISAC"
-CAL_join_isac_desc:0 ""
+CAL_join_isac_desc:0 "Now that our campaign to win the rest of the Entente over has succeeded we can work on joining ISAC, the Imperial Scientific and Academic Council. With our research now fully part of the Entente, our safety is ensured. "
 CAL_join_mittle_europa:0 "Join Mitteleuropa"
-CAL_join_mittle_europa_desc:0 ""
+CAL_join_mittle_europa_desc:0 "The best defense against the ravages of Syndicalism is to side with the Germans. We already do business with their numerous colonies so aligning ourselves should be rather easy. "
 CAL_californian_aog_offices:0 "Open AOG offices"
-CAL_californian_aog_offices_desc:0 ""
+CAL_californian_aog_offices_desc:0 "Of all the German Companies that we do business with, the one that we work with the most is the AOG. We should work to open up several business offices in the Pacific for the AOG and other German Companies. As well making sure that Pacific Businesses have offices oversees in Germany and the AOG as well. "
 CAL_german_freindship:0 "German Friendship"
-CAL_german_freindship_desc:0 ""
+CAL_german_freindship_desc:0 "We should work to help make sure that we are on good terms with the German Empire. We have joined them but we should make sure that our new found allies will trust us and know that we are committed to Mittleuropa. "
 CAL_join_kaiser_society:0 "Join The Kaiser Willhelm Society"
-CAL_join_kaiser_society_desc:0 ""
+CAL_join_kaiser_society_desc:0 "Now that we have good ties both business and political with the German Empire we should seek to join The Kaiser Willhelm Society. By working with the Germans we can help improve our own research potential and improve theres as well. "
 CAL_join_japan:0 "Join the Co-prosperity Sphere"
-CAL_join_japan_desc:0 ""
+CAL_join_japan_desc:0 "We have had a good relation with the Japanese empire before we became independent and now that we are they remain one of our top trading partners. We should seek to forge an even stronger relationship with the Japanese Empire and join their Co-Prosperity Sphere. "
 CAL_japanese_freindship:0 "Japanese Friendship"
-CAL_japanese_freindship_desc:0 ""
+CAL_japanese_freindship_desc:0 "Now that we have joined the Co-Prosperity Sphere we should work on making sure that the Japanese know that we are good friends and will be committed to the alliance."
 CAL_japanes_bussiness:0 "Japanese-Californian businesses"
-CAL_japanes_bussiness_desc:0 ""
+CAL_japanes_bussiness_desc:0 "We should make sure to improve our business with the Japanese. Both of our countries business interests often overlap and a trade treaty will help both of our countries businesses and trade and bring prosperity to both of us.  "
 CAL_japanese_research_cooperation:0 "Join Rikagaku Kenkyusho"
-CAL_japanese_research_cooperation_desc:0 ""
+CAL_japanese_research_cooperation_desc:0 "Now that we have good ties both business and political with the Japanese Empire we should seek to join Rikagaku Kenkyusho. By working with the Japanese we can help improve our own research potential and improve theres as well. "
 CAL_american_autonomy:0 "American Autonomy"
-CAL_american_autonomy_desc:0 ""
+CAL_american_autonomy_desc:0 "The Civil War has come to an End and the Old Republic was victorious. It would do us good to rejoin the USA. However we should make it clear that we shall keep our autonomy that we have forged in the chaos of the civil war."
 CAL_school_of_ameirca:0 "School of America"
-CAL_school_of_ameirca_desc:0 ""
+CAL_school_of_ameirca_desc:0 "The USA has recently formed a learned society called the University of the Free World. It would not do if the Pacific States did not join the University and add our knowledge to theirs. "
 CAL_american_business:0 "American Business Ties"
-CAL_american_business_desc:0 ""
+CAL_american_business_desc:0 "When we part of the USA we had free trade from east to west. We should sign a free trade treaty between the Pacific and United States to return to that nature of trade to better the prosperity of all. "
 
 ### Ideas ###
 california_rearmament:0 "California War Industries"
