Localization for the Yunnan tree

--- a/localisation/KR_Yunnan_l_english.yml
+++ b/localisation/KR_Yunnan_l_english.yml
@@ -293,3 +293,113 @@ yunnan.52.b:0 "We must accept their will"
 yunnan.53.t:0 "Unity for China!"
 yunnan.53.d:0 "The National protection Alliance has accepted our push for the total unification of our countries. This is a great day for all of China!"
 yunnan.53.a:0 "Bring them into the fold!" 
+
+### Foci ###
+YUN_army_effort:0 "Army Effort"
+YUN_army_effort_desc:0 "Despite the increasing possibilities of aerial and naval warfare, ground combat is still key in tomorrow's wars. With preparation, we can avoid reliving the hell of the trenches."
+YUN_equipment_effort:0 "Equipment Effort"
+YUN_equipment_effort_desc:0 "The limits for what equipment can be carried by infantry are constantly being pushed. We will focus on giving our troops the best tools available."
+YUN_motorization_effort:0 "Motorisation Effort"
+YUN_motorization_effort_desc:0 "Mobility and protection are crucial to get infantry into and out of the field safely. Focusing on these developments will allow us to take action quickly."
+YUN_doctrine_effort:0 "Doctrine Effort"
+YUN_doctrine_effort_desc:0 "The military doctrines that defined ground combat in the Great War are outdated. We must put our greatest minds to the task of shaping the military thought of tomorrow."
+YUN_equipment_effort_2:0 "Equipment Effort II"
+YUN_equipment_effort_2_desc:0 "We will continue our efforts to ensure our infantry and support troops are armed with the best possible equipment of our time."
+YUN_mechanization_effort:0 "Mechanisation Effort"
+YUN_mechanization_effort_desc:0 "Rethinking the possibilities of motorised infantry, we can push the limits of what vehicles can be constructed today."
+YUN_doctrine_effort_2:0 "Doctrine Effort II"
+YUN_doctrine_effort_2_desc:0 "The battlefield has changed not just in the interbellum years, but over the course of recent conflicts. We must continuously reevaluate our doctrines to reflect this."
+YUN_equipment_effort_3:0 "Equipment Effort III"
+YUN_equipment_effort_3_desc:0 "Instead of imitating or buying foreign equipment, we should aim to become world-leading in infantry weapons."
+YUN_armor_effort:0 "Armor Effort"
+YUN_armor_effort_desc:0 "Applying what we have learned from mechanising our infantry, we can improve our armoured vehicles as well."
+YUN_special_forces:0 "Special Forces"
+YUN_special_forces_desc:0 "We have need of elite forces; mountain troops and paratroopers should be our priority."
+
+YUN_aviation_effort:0 "Aviation Effort"
+YUN_aviation_effort_tt:0 "Not enough building slots for §YAir Base§!"
+YUN_aviation_effort_desc:0 "Nowhere is technological advances more rapid than in aerial warfare. Aviation is a field any modern nation must master."
+YUN_fighter_focus:0 "Fighter Focus"
+YUN_fighter_focus_desc:0 "We have not seen that last of dogfights in the Great War. Keeping ahead in the development of fighter planes will give us an edge in the future."
+YUN_bomber_focus:0 "Bomber Focus"
+YUN_bomber_focus_desc:0 "When people of the future speak of the horror to today's wars, fire raining from the skies will prominently feature. We will do our best to ensure those stories are told by our enemies."
+YUN_aviation_effort_2:0 "Aviation Effort II"
+YUN_aviation_effort_2_desc:0 "Further advances in aviation will be necessary to integrate our air force well with other branches of the military."
+YUN_CAS_effort:0 "CAS Effort"
+YUN_CAS_effort_desc:0 "A modern army needs support from vehicles not only on the ground, but also in the air."
+YUN_rocket_effort:0 "Rocket Effort"
+YUN_rocket_effort_desc:0 "Rocket and jet engines allow for unprecedented speeds for unmanned and manned vessels alike. Pioneering these technologies will allow us to take the enemy by surprise."
+YUN_NAV_effort:0 "NAV Effort"
+YUN_NAV_effort_desc:0 "Just as the new naval warfare takes place in part beneath the water's surface, part of it takes place in the air above the waters."
+
+YUN_naval_effort:0 "Naval Effort"
+YUN_naval_effort_tt:0 "Not enough building slots for §YNaval Dockyards§!"
+YUN_naval_effort_desc:0 "The expansion of our navy should be our first priority. Assign all available resources to new Dockyards and research into light surface ships."
+YUN_flexible_navy:0 "Flexible Navy"
+YUN_flexible_navy_desc:0 "Reinventing naval warfare to account for the advances in submarine technology will allow us to strike efficiently against enemy convoys."
+YUN_large_navy:0 "Large Navy"
+YUN_large_navy_desc:0 "Adapting our naval doctrines to accommodate large ships and ensuring the safety of our trade convoys will teach us much about what sort of ships we need."
+YUN_submarine_effort:0 "Submarine Effort"
+YUN_submarine_effort_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat. We would do well to not just protect against submarines, but also use them against enemy shipping."
+YUN_cruiser_effort:0 "Cruiser Effort"
+YUN_cruiser_effort_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
+YUN_destroyer_effort:0 "Destroyer Effort"
+YUN_destroyer_effort_desc:0 "Studying the design and strategic use of submarines, we have also learned how to counter those strategies. Destroyers will be crucial for this."
+YUN_capital_ships_effort:0 "Capital Ship Effort"
+YUN_capital_ships_effort_desc:0 "The nation with the most battleships will rule the oceans. Battleships and carriers represent the old and the new in naval superiority."
+
+YUN_industrial_effort:0 "Industrial Effort"
+YUN_industrial_effort_desc:0 "Focus all our political efforts on building up the civilian industry in a great leap forward."
+YUN_industrial_effort_2:0 "Industrial Effort II"
+YUN_industrial_effort_2_desc:0 "With iron will and a relentless work ethic, we can mobilise the people in another great industrial effort."
+YUN_construction_effort:0 "Construction Effort"
+YUN_construction_effort_tt:0 "Not enough building slots for §YCivilian Factories§!"
+YUN_construction_effort_desc:0 "Civilian industrial capacity must not be underestimated even when war looms over the world."
+YUN_production_effort:0 "Armament Effort"
+YUN_production_effort_tt:0 "Not enough building slots for §YMilitary Factory§!"
+YUN_production_effort_desc:0 "If you can build tractors, you can build tanks! We must not allow our military production capacity to lag behind."
+YUN_construction_effort_2:0 "Construction Effort II"
+YUN_construction_effort_2_desc:0 "Continuing to expand our factories will allow us to speed up production of goods for trade and further construction efforts."
+YUN_production_effort_2:0 "Armament Effort II"
+YUN_production_effort_2_desc:0 "Trying to adapt civilian factories to produce military equipment is inefficient. We should focus on preparing military production now."
+YUN_production_effort_3:0 "Armament Effort III"
+YUN_production_effort_3_desc:0 "Continued efforts to expand our military factories are necessary to meet the demands for new equipment."
+YUN_infrastructure_effort:0 "Infrastructure Effort"
+YUN_infrastructure_effort_desc:0 "A country without proper infrastructure cannot pursue advanced projects or constructions."
+YUN_infrastructure_effort_tt:0 "Not enough building slots for §YInfrastructure§!"
+YUN_synth_oil_effort_tt:0 "Not enough building slots for §YSynthetic Refinery§!"
+YUN_infrastructure_effort_2:0 "Infrastructure Effort II"
+YUN_infrastructure_effort_2_desc:0 "Extending our infrastructure further will enable the transports and communications necessary for high-tech clandestine projects."
+YUN_construction_effort_3:0 "Construction Effort III"
+YUN_construction_effort_3_desc:0 "Expansion of our infrastructure network has significantly improved our capacity for construction."
+YUN_extra_tech_slot:0 "Extra Research Slot"
+YUN_extra_tech_slot_desc:0 "Our industrial expansion and other recent advances might allow us to conduct more R&D in parallel."
+YUN_extra_tech_slot_2:0 "Extra Research Slot II"
+YUN_extra_tech_slot_2_desc:0 "The rapid industrialisation of our nation has opened up new opportunities in R&D that we should pursue."
+YUN_technology_sharing:0 "Technology Sharing"
+YUN_technology_sharing_desc:0 "By sharing technological advances with our allies, our whole faction will be able to conduct wartime R&D more efficiently."
+YUN_secret_weapons:0 "Secret Weapons"
+YUN_secret_weapons_desc:0 "It is tempting to expend all extra resources into developing tanks and planes, but the secret to winning wars lies in whole new fields of science; electronics, rocketry and nuclear research."
+
+YUN_political_effort:0 "Political Effort"
+YUN_political_effort_desc:0 "To bring about change in the world, we need to be able to bring about change in our own country. Strengthening our political position should come first."
+YUN_collectivist_ethos_kr:0 "Unite The Nation"
+YUN_collectivist_ethos_kr_desc:0 "Unites The Nation"
+YUN_militarism:0 "Militarism"
+YUN_militarism_desc:0 "Those who view the military as a necessary evil are doomed to hesitate in the face of war. We will ingrain militarism into our culture to become a people of soldiers."
+YUN_military_youth:0 "Military Youth"
+YUN_military_youth_desc:0 "Organisations to promote discipline and political education of young people in our nation will foster loyalty and self-sacrifice early."
+YUN_ideological_fanaticism:0 "Ideological Fanaticism"
+YUN_ideological_fanaticism_desc:0 "Our politically established values and goals are worth dying for as much as any ancient faith. Any follower should be prepared to face death, and those who stray better be prepared to face death."
+YUN_liberty_ethos_kr:0 "Spirit Of Freedom"
+YUN_liberty_ethos_kr_desc:0 "Spirit Of Freedom"
+YUN_rights_of_man:0 "The Rights Of Man"
+YUN_rights_of_man_desc:0 "The Rights Of Man"
+YUN_liberty_research:0 "University Grants"
+YUN_liberty_research_desc:0 "University Grants"
+YUN_generic_welfare:0 "Welfare Programs"
+YUN_generic_welfare_desc:0 "Welfare Programs"
+YUN_generic_national_identity:0 "National Identity"
+YUN_generic_national_identity_desc:0 "National Identity"
+
+YUN_eastern_expansion:0 "Eastern Expansion"
