--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -653,11 +653,12 @@ fengtian.new.59.b:0 "Army first!"
 fengtian.new.59.c:0 "A mixed approach is best"
 
 fengtian.new.60.t:0 "Mantetsu Chosabū"
-fengtian.new.60.d:0 "INSERT"
+fengtian.new.60.d:0 "The South Manchuria Railway Company's Research Wing, colloquially known as Mantetsu Chosabū, has grown over the years from mere a mere corporate R&D department into the heart of Japan's colonial research programme, with divisions dedicated to everything from agricultural science to intelligence gathering. The sheer scale of Mantetsu Chosabū and its ambitions has lead to the opening of offices in Berlin, Vancouver, and New York, to attract foreign talent, and wide recruitment from Japan's foremost universities. The result is a surprisingly liberal and open minded intellectual community, which sometimes goes insofar as to place scientific inquiry before nationalistic concerns. \n\n This appears to be one of those instances, as our government has been approached by a Chosabū represenative offering future assistance in one of several technological fields in return for permission to test a new curative infusion on several divisions of our soldiers. Aware that this might cause concern among the men, the representative has already proposed that the infusion be sequentially administered by a certain Mr Suchong Yi, a rather circumspect but assuredly Chinese individual, instead of Mantetsu's own scientists. It should be noted that the Kwantung Army garrison in Dairen were strongly opposed to this arrangement."
 fengtian.new.60.a:0 "Radar"
 fengtian.new.60.b:0 "Construction"
 fengtian.new.60.c:0 "Production Efficiency"
 fengtian.new.60.d:0 "Decryption"
+fengtian.new.60.e:0 "This is immoral!"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
